--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+ul {
+  padding-left: 20px;
+}
+
+ul li {
+  margin-bottom: 16px;
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -16,7 +24,7 @@
 }
 
 .container {
-  max-width: 1040px;
+  max-width: 840px;
   padding: 0 20px;
   margin: 0 auto;
 }
@@ -28,16 +36,19 @@
 
 .code-lang {
   position: absolute;
-  background: #5e6060;
-  top: 0px;
-  left: 0px;
+  background: #747474;
+  top: 0;
+  left: 11px;
   padding: 5px 10px;
   line-height: 1;
   font-size: 0.9em;
   color: #fff;
+  margin-bottom: 10px;
+  border-radius: 0 0 4px 4px;
 }
 
 .code {
+  line-height: 1.4;
   background: #2f3437;
   list-style: none;
   color: #fff;
@@ -45,6 +56,8 @@
   overflow: auto;
   border-radius: 8px;
   padding: 16px;
+  padding-top: 37px;
+  margin-top: 0;
 }
 
 pre code {
