--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,25 @@
-.header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+ul {
+  padding-left: 20px;
+}
+ul li {
+  margin-bottom: 16px;
 }
 
-.header__logo {}
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header__logo {
+
+}
 
 .container {
-    max-width: 1040px;
-    padding: 0 20px;
-    margin: 0 auto;
+  max-width: 840px;
+  padding: 0 20px;
+  margin: 0 auto;
 }
 
 .contents__ttl {}
@@ -18,30 +27,35 @@
 /*ソースコード用*/
 
 .code-block {
-    position: relative;
+  position: relative;
 }
 
 .code-lang {
-    position: absolute;
-    background: #5e6060;
-    top: 0px;
-    left: 0px;
-    padding: 5px 10px;
-    line-height: 1;
-    font-size: 0.9em;
-    color: #fff;
+  position: absolute;
+  background: #747474;
+  top: 0;
+  left: 11px;
+  padding: 5px 10px;
+  line-height: 1;
+  font-size: 0.9em;
+  color: #fff;
+  margin-bottom: 10px;
+  border-radius: 0 0 4px 4px;
 }
 
 .code {
-    background: #2f3437;
-    list-style: none;
-    color: #fff;
-    font-size: 16px;
-    overflow: auto;
-    border-radius: 8px;
-    padding: 16px;
-}
-pre code {
-    user-select: all !important;
+  line-height: 1.4;
+  background: #2f3437;
+  list-style: none;
+  color: #fff;
+  font-size: 16px;
+  overflow: auto;
+  border-radius: 8px;
+  padding: 16px;
+  padding-top: 37px;
+  margin-top: 0;
 }
 
+pre code {
+  user-select: all !important;
+}
