--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,25 @@ ul li {
   margin-bottom: 16px;
 }
 
+figure {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  width: 100%;
+  display: block;
+}
+
+a {
+  color: inherit;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+a:hover {
+  opacity: 0.7;
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -21,6 +40,10 @@ ul li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.header__logo a {
+  text-decoration: none;
 }
 
 .container {
