--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@ img {
 
 a {
   color: inherit;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 a:hover {
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .header {
@@ -44,6 +44,11 @@ a:hover {
 
 .header__logo a {
   text-decoration: none;
+}
+.header__logo object {
+  max-width: 160px;
+  width: 100%;
+  height: auto;
 }
 
 .container {
@@ -87,5 +92,31 @@ pre code {
   -webkit-user-select: all !important;
      -moz-user-select: all !important;
           user-select: all !important;
+}
+
+.dl__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.dl__date {
+  width: 80px;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.03em;
+}
+
+.dl__desc {
+  width: calc(100% - 80px);
+  font-size: 16px;
+  line-height: 30px;
 }
 /*# sourceMappingURL=style.css.map */
