--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,39 @@ a:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 24px 0;
 }
 
+.header__nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.header__nav li + li {
+  margin-left: 16px;
+}
+.header__nav a {
+  text-decoration: none;
+}
+
+.header__logo {
+  margin: 0;
+  padding: 0;
+}
 .header__logo a {
   text-decoration: none;
 }
 .header__logo object {
-  max-width: 160px;
+  max-width: 140px;
   width: 100%;
   height: auto;
 }
