--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 ul {
   padding-left: 20px;
 }
@@ -105,6 +110,50 @@ a {
 pre code {
   user-select: all !important;
 }
+
+
+//pagetop
+.page-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  right: 16px;
+  bottom: 0;
+  z-index: 1;
+}
+
+.page-top__inner {
+  position: relative;
+  background: #000;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 12px;
+  border-radius: 8px;
+  font-size: 14px;
+  &::after {
+    content: '';
+    position: absolute;
+    top: 16px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 8px;
+    height: 8px;
+    border-top: 2px solid #fff;
+    border-left: 2px solid #fff;
+    transform: rotate(45deg);
+  }
+}
+
+.page-top__item {
+  transform: translate(0, 8px);
+}
+
+
 
 // dlで横並び
 .dl__list {
