--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body {
   padding: 0;
 }
 
+body {
+  font-family: "Noto Sans JP", sans-serif;
+}
+
 ul {
   padding-left: 20px;
 }
@@ -31,6 +35,24 @@ a:hover {
   opacity: 0.5;
 }
 
+h2 {
+  background: #e8e8e8;
+  padding: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: calc(50% - 50vw);
+  margin-left: calc(50% - 50vw);
+  padding-right: calc(50vw - 50%);
+  padding-left: calc(50vw - 50%);
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -46,6 +68,7 @@ a:hover {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 24px 0;
+  padding-bottom: 0;
 }
 
 .header__nav ul {
