--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,10 @@ body {
   padding: 0;
 }
 
+body {
+  font-family: 'Noto Sans JP', sans-serif;
+}
+
 ul {
   padding-left: 20px;
 }
@@ -28,12 +32,25 @@ a {
   }
  }
 
+ h2 {
+  background: #e8e8e8;
+    padding: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: calc(50% - 50vw);
+    margin-left: calc(50% - 50vw);
+    padding-right: calc(50vw - 50%);
+    padding-left: calc(50vw - 50%);
+}
+
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 24px 0;
+  padding-bottom: 0;
 }
 
 .header__nav {
